--- a/lab-2/docker-compose.yml
+++ b/lab-2/docker-compose.yml
@@ -1,28 +1,32 @@
 services:
   db_server:
     build:
-      context: .
+      context: ./servers
       dockerfile: ./db_server/Dockerfile
     ports:
       - "8080:8080"
+    environment:
+      DB_IP: "0.0.0.0"
+      DB_PORT: 8080
 
   async_asyncio:
     build:
-      context: .
+      context: ./servers
       dockerfile: ./asyncio_server/Dockerfile
     ports:
-      - "8085:8080"
+      - "8081:8080"
     depends_on:
       - db_server
+    environment:
+      DB_IP: db_server
+      DB_PORT: 8080
+      SERVER_IP: "0.0.0.0"
+      SERVER_PORT: 8080
     develop:
       watch:
         - action: rebuild
-          path: ./async_backend/asyncio_server
+          path: ./asyncio_server
           target: .
         - action: rebuild
           path: ./commons
           target: /app/commons
-  client:
-    build: ../client/
-    depends_on:
-      - async_asyncio
