--- a/lab-3/kafka_admin/Dockerfile
+++ b/lab-3/kafka_admin/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.8-slim
 WORKDIR /app
 RUN pip install kafka-python
-COPY ./ml_service.py .
-CMD ["python", "ml_service.py"]
+COPY ./admin.py .
+CMD ["python", "admin.py"]
