[Added] a small web interface for the session

--- a/lab-3/analytics_service/Dockerfile
+++ b/lab-3/analytics_service/Dockerfile
@@ -2,5 +2,6 @@
 FROM python:3.8-slim
 WORKDIR /app
 RUN pip install kafka-python
+RUN pip install requests
 COPY ./analytics_service.py .
 CMD ["python", "analytics_service.py"]
