--- a/lab-3/kafka_admin/Dockerfile
+++ b/lab-3/kafka_admin/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.8-slim
 WORKDIR /app
 RUN pip install kafka-python
+RUN pip install requests
 COPY ./admin.py .
 CMD ["python", "admin.py"]
